Drop support for Java 8, make Java 11 the minimum
- Remove javaToolchainVersion := "8" from all sbt projects
- Remove minimized8 test project and tests/minimized/.j8 directory
- Switch javac options from "-source/-target 1.8 -bootclasspath rt.jar"
  to "--release 11" in JavaToolchainPlugin
- Drop Java 8 specific code from JavaVersion (isJava8, JAVA8_VERSION,
  1.8 parsing) and PackageTable (indexBootstrapClasspath); default
  Java version is now 11
- Remove Java 8 special cases from GradleJavaCompiler (jre/lib copy)
  and ScipBuildTool (M1 amd64 hack and javac module options conditional)
- Remove Java8Only test tag and the playframework/checkerframework
  Java 8 tests; bump JVMSupport minimum to 11; allJava is now [11,17,21]
- Bump CI matrices and release workflows from Java 8 to Java 11
- Drop Java 8 from docker-setup.sh pre-install list
- Bump example pom.xml and Maven plugin template to Java 11
- Update docs to reflect Java 11 as the minimum supported version